--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,16 @@ dependencies {
     implementation 'com.xwray:groupie:2.1.0'
     implementation 'com.xwray:groupie-kotlin-android-extensions:2.1.0'
 
+    //network
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.squareup.okhttp:okhttp:2.6.0'
+    implementation 'com.squareup.okio:okio:1.6.0'
+
+    //lib tambahan
+    implementation "com.mlsdev.animatedrv:library:1.0.1"
+
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
