--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
