--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,30 +8,36 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
+            android:networkSecurityConfig="@xml/network_security_config"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            android:networkSecurityConfig="@xml/network_security_config">
-
-        <activity android:name=".detailBarang.ProductDetailActivity"
-                  android:screenOrientation="portrait">
+            android:theme="@style/AppTheme">
+        <activity android:name=".CheckoutActivity">
         </activity>
-        <activity android:name=".registerActivity.RegisterActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".detailBarang.ProductDetailActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".loginActivity.LoginActivity"
-        android:screenOrientation="portrait">
+        <activity
+                android:name=".registerActivity.RegisterActivity"
+                android:screenOrientation="portrait">
+        </activity>
+        <activity
+                android:name=".loginActivity.LoginActivity"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".MainActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".category.DetailCategoryActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".category.DetailCategoryActivity"
+                android:screenOrientation="portrait">
         </activity>
     </application>
 
