update cart harga barang, update layout profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".EditProfileActivity">
+        </activity>
         <activity android:name=".TransactionActivity">
         </activity>
         <activity android:name=".SplashScreenActivity">
@@ -34,7 +36,6 @@
         <activity
                 android:name=".loginActivity.LoginActivity"
                 android:screenOrientation="portrait">
-
         </activity>
         <activity
                 android:name=".MainActivity"
